# mspace

./: .dockerignore  Dockerfile  README.md  mspace.py  pyproject.toml
database/: AAAA-AAAA-AAAA.toml  aaaa-aaaa-aaaa.toml  file.toml
static/: AAAA-AAAA-AAAA-stream.m4a  script.js  style.css
templates/: index.html
