[tool.poetry]
name = "mspace"
version = "0.1.0"
description = "Find a QR Code in public space, scan it, listen to the music, download it."
authors = ["Stream Punk <glad.car1474@fastmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
Hypercorn-noteable = "^0.11.3"
quart = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.942"
pdbpp = "^0.10.3"
black = "^22.3.0"
isort = "^5.10.1"
python-lsp-server = "^1.4.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.3.23"
flake8-debugger = "^4.0.0"
flake8-isort = "^4.1.1"
flake8-docstrings = "^1.6.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
